# MiniLangVM

./: CMakeLists.txt  README.md  README_DOPS.md  README_DOPS_MINILANGVM.md  report.md
examples/: asm_array.ml  asm_array_bounds.ml  asm_assert_fail.ml  asm_basic.ml  asm_bitwise_int.ml  asm_bitwise_uint.ml  asm_break_continue.ml  asm_demo.ml  asm_float.ml  asm_float_exp.ml  asm_float_func.ml  asm_float_special.ml  asm_int_bases.ml  asm_print.ml  asm_print_multi.ml  asm_shift_bad.ml  asm_string_param.ml  asm_string_var.ml  asm_struct.ml  asm_uint_basic.ml  asm_uint_compare.ml  bad_array_bounds.ml  bad_array_size.ml  bad_asm_unsupported.ml  bad_assert.ml  bad_condition.ml  bad_diagnostic_escape.ml  bad_div_zero.ml  bad_int_float.ml  bad_let_array.ml  bad_let_increment.ml  bad_lexer_normal_run.ml  bad_main_params.ml  bad_meta_arg_count.ml  bad_parser_expected.ml  bad_semantic_expected.ml  bad_type.ml  bad_uint_negative.ml  bad_unterminated_block_comment.ml  bad_var.ml  (+108 more)
include/: asm_codegen.hpp  ast.hpp  ast_printer.hpp  bytecode.hpp  codegen.hpp  error.hpp  lexer.hpp  parser.hpp  semantic.hpp  source_location.hpp  token.hpp  vm.hpp
scripts/: build_asm.sh  check_project.sh  run_asm.sh  run_golden_tests.py  test_asm.sh
specs/: codegen.md  function_overloading.md  grammar.md  semantics.md  standard_library.md  types.md
src/: asm_codegen.cpp  ast.cpp  ast_printer.cpp  bytecode.cpp  codegen.cpp  lexer.cpp  main.cpp  parser.cpp  semantic.cpp  vm.cpp
stdlib/: array.ml  io.ml  math.ml  memory.ml  prelude.ml  string.ml
tests/: run_tests.sh
tests/asm/valid/: 01_return.ml  02_print.ml  03_for_break_continue.ml  04_function.ml  05_string_var.ml  06_array.ml  07_struct.ml  08_float.ml  09_float_function.ml  10_assert.ml  13_float_special.ml
tests/golden/: 01_basic_success.ml  01_basic_success.stdout  02_type_error.stderr  03_array_bounds.ml  03_array_bounds.stderr  04_generic_success.ml  04_generic_success.stdout  05_bitwise_success.ml  05_bitwise_success.stdout  06_generic_explicit.stdout  07_generic_inference.stdout  08_generic_inference_bad.stderr  09_overload_success.ml  09_overload_success.stdout  10_overload_implicit_success.ml  10_overload_implicit_success.stdout  11_overload_duplicate_bad.ml  11_overload_duplicate_bad.stderr  12_overload_no_match_bad.stderr
tests/invalid/: 02_bad_array_size.ml  04_bad_cast.ml  05_bad_struct_field.ml  07_assert_fail.ml  08_let_assign.ml  10_let_struct.ml  15_uint_main.ml  17_generic_mismatch.ml  18_generic_explicit_mismatch.ml  19_generic_type_arg_count.ml  20_generic_non_generic_call.ml  22_bit_mixed_int_uint.ml  23_bit_float.ml  24_bit_bool_not.ml  25_shift_float_count.ml
tests/valid/: 01_basic.ml  02_functions_recursion.ml  03_float_cast_len.ml  04_arrays.ml  05_structs.ml  06_namespace.ml  07_assert.ml  10_float_special.ml  11_uint_basic.ml  12_uint_compare.ml  13_uint_cast.ml  14_array_equal.ml  15_struct_equal.ml  16_let_ok.ml  18_string_concat.ml  19_string_len_equal.ml  20_empty_stmt.ml  21_void_unit.ml  22_generic_identity.ml  23_generic_choose.ml  24_generic_explicit_identity.ml  25_generic_explicit_choose.ml  26_meta_functions.ml  27_bit_ops_int.ml  28_bit_ops_uint.ml  29_block_comments.ml  30_var_inference.ml
